[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/Basic/Screens/Screen1/Screen1.gd" type="Script" id=1]
[ext_resource path="res://Resources/Basic/Screens/Screen1/Screen1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Basic/Screens/Screen1/Zeiger.png" type="Texture" id=3]
[ext_resource path="res://Resources/Basic/Screens/Screen1/DoorRight.png" type="Texture" id=4]
[ext_resource path="res://Resources/Basic/Screens/Screen1/DoorLeft.png" type="Texture" id=5]
[ext_resource path="res://Resources/Basic/Screens/Screen1/Doors.png" type="Texture" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMediumBold.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/Basic/Screens/Screen1/SpeedLimit.png" type="Texture" id=8]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/Oswald-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Resources/Basic/Screens/Screen1/richtung_fwd.png" type="Texture" id=10]
[ext_resource path="res://Resources/Basic/Screens/Screen1/richtung_bwd.png" type="Texture" id=11]
[ext_resource path="res://Resources/Basic/Screens/Screen1/richtung_neutral.png" type="Texture" id=12]
[ext_resource path="res://Resources/Basic/Screens/Screen1/PZB.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 9 )

[node name="Screen1" type="Node2D"]
script = ExtResource( 1 )
SpeedPointerRotationAt100 = 40.0
SollSpeedPointerRotationAt100 = -50.0
CommandPointerRotationAt100 = 190.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( 650, 450 )
texture = ExtResource( 2 )

[node name="Speed" type="Label" parent="."]
margin_left = 272.67
margin_top = 380.005
margin_right = 453.67
margin_bottom = 500.005
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 588.367
margin_top = 19.8775
margin_right = 738.367
margin_bottom = 86.8775
custom_fonts/font = SubResource( 2 )
text = "12:00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLimitPointer" type="Sprite" parent="."]
position = Vector2( 361.6, 326.177 )
rotation = -2.61799
texture = ExtResource( 8 )
offset = Vector2( -0.253, -122.526 )

[node name="SpeedPointer" type="Sprite" parent="."]
modulate = Color( 0.729412, 0.0352941, 0.0352941, 1 )
position = Vector2( 363.129, 326.524 )
rotation = -1.0472
texture = ExtResource( 3 )
offset = Vector2( -96.0201, 0.240082 )

[node name="CommandPointer" type="Sprite" parent="."]
modulate = Color( 1, 0.545098, 0.0156863, 1 )
position = Vector2( 954.832, 326.524 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( -96.0201, 0.240082 )

[node name="Reverser" type="Node2D" parent="."]

[node name="Neutral" type="Sprite" parent="Reverser"]
position = Vector2( 658, 326 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Forward" type="Sprite" parent="Reverser"]
visible = false
position = Vector2( 658, 326 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Backward" type="Sprite" parent="Reverser"]
visible = false
position = Vector2( 658, 326 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Doors" type="Node2D" parent="."]
position = Vector2( 658, 600 )

[node name="Door" type="Sprite" parent="Doors"]
texture = ExtResource( 6 )

[node name="Left" type="Sprite" parent="Doors"]
texture = ExtResource( 5 )

[node name="Right" type="Sprite" parent="Doors"]
texture = ExtResource( 4 )

[node name="Info" type="Control" parent="."]
margin_left = 42.0
margin_top = 614.0
margin_right = 562.0
margin_bottom = 744.0

[node name="EnforcedBraking" type="ColorRect" parent="Info"]
margin_right = 256.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.866667, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/EnforcedBraking"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ENFORCED_BREAKING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Engine" type="ColorRect" parent="Info"]
margin_left = 264.0
margin_right = 520.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.745098, 0.564706, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/Engine"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ENGINE_OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sifa" type="ColorRect" parent="Info"]
margin_top = 69.0
margin_right = 256.0
margin_bottom = 130.0
rect_min_size = Vector2( 256, 61 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/Sifa"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SIFA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Autopilot" type="ColorRect" parent="Info"]
margin_left = 264.0
margin_top = 69.0
margin_right = 520.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.290196, 0.909804, 0.92549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/Autopilot"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AUTOMATIC_DRIVING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PZB" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 738.0
margin_top = 614.0
margin_right = 1258.0
margin_bottom = 744.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="U" type="ColorRect" parent="PZB"]
margin_right = 168.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.25098, 1, 1 )

[node name="Label" type="Label" parent="PZB/U"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "55"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="ColorRect" parent="PZB"]
margin_left = 176.0
margin_right = 344.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.25098, 1, 1 )

[node name="Label" type="Label" parent="PZB/M"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "70"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O" type="ColorRect" parent="PZB"]
margin_left = 352.0
margin_right = 520.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.25098, 1, 1 )

[node name="Label" type="Label" parent="PZB/O"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "85"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Befehl40" type="ColorRect" parent="PZB"]
margin_top = 69.0
margin_right = 168.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PZB/Befehl40"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Befehl 40"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="500Hz" type="ColorRect" parent="PZB"]
margin_left = 176.0
margin_top = 69.0
margin_right = 344.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="PZB/500Hz"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "500 Hz"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1000Hz" type="ColorRect" parent="PZB"]
margin_left = 352.0
margin_top = 69.0
margin_right = 520.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 0, 1 )

[node name="Label" type="Label" parent="PZB/1000Hz"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1000 Hz"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
